[tool.poetry]
name = "inep-analise-ces"
version = "0.1.0"
description = ""
authors = ["arcstur <arcstur@gmail.com>"]
readme = 'README.md'


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
openpyxl = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
